css/home.css
/* ... */
.headerLogoImage {
    height: 90%;
}

@media only screen and (max-width: 300px) {
    .headerLogoImage {
        padding-top: 5px;
        height: 45px;
    }  
}

/*------------------------------------------ 

            NAVIGATION BAR

---------------------------------------------*/

#logo {
    cursor: pointer;
}

.skipToTopSection {
    position: fixed;
    bottom: 15px;
    right: 15px;
    height: 68px;
    width: 68px;
    background-color: var(--verydarkblue);
    border-radius: 50px;
    text-align: center;
    cursor: pointer;
    opacity: 0.5;
}

.skipToTopSection:hover {
    opacity: 1;
}

#skipToTop {
    padding: 5px;
    margin: auto;
    font-size: 38px;
    color: white;
}

.hero_title {
    font-size: 5vw;
    width: fit-content;
    text-align: left;
    margin: auto;
}

.firstHeader {
    display: block;
    float: left;
    /* height: 25%;
    min-height: 150px; */
    width: 100%;
    padding-top: 12%;
    padding-bottom: 12%;
    background-image: url(../img/hero_image.png);
    box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
}

@media only screen and (min-width: 1300px) {
    .firstHeader {
        padding-top: 10%;
        padding-bottom: 10%;
    }  
}

@media only screen and (max-width: 576px){
    .firstHeader {
        padding-top: 25%;
        padding-bottom: 25%;
    }

    .hero_title {
        font-size: 8vw;
    }
}

.introDescription {
    float: center;
    margin: auto;
    width: 65%;
    /* min-width: 350px; */
}

.introDescription p, .introDescription h1 {
    color: white;
    opacity: 1;
}

.introDescription a {
    color: var(--lightbluegrey);
}

.introDescription a:hover {
    color: white;
}

.navigationSection {
    top: 0px;
    right: 0px;
    position: fixed;
    z-index: 10;
}

.rowFormat:after {
    content: "";
    display: table;
    clear: both;
}

table {
    z-index: 20;
    top: 75px;

    display: block;
    overflow: auto;
    margin-bottom: 65px;
    position: fixed;
    right: 0px;
    height: 75%;
    width: 275px;
}
.tbody {
    width: 100%;
    display: block;
    cursor: pointer;
}

th {
    margin: auto;
    width: 9999px;
    float: center;
}

.navBarRow {
    display: block;
}

.colContainsContent {
    /* float: left; */
    padding-top: 125px;
}
.containsTable {
    height: 100%;
    width: 100%;
}

#iconForSkip {
    padding-top: 0;
    margin-top: 15px;
    margin-right: 15px;

    font-size: 50px;
    color: var(--blue);
    float: right;
    cursor: pointer;
}

#iconForSkip:hover {
    color: var(--white);
}
#contentOfSkip {
    display: none;
    position: fixed;
}
#contentOfSkip.visible {
    display: block;
}

.skipItem {
    font-size: 22px;
    color: var(--white);
    margin: 0px;
}

th:hover .skipItem, .skipItem:hover {
    color: var(--black);
}

tr {
    cursor: pointer;
}

th {
    text-align: right;
    padding: 15px;
    background-color: var(--black);
}

th:hover {
    background-color: white;
}

#naviconholder {
    height: 75px;
    width: 75px;
    float: right;
}

@media only screen and (max-width: 767px){
    .navigationSection.menuOn {
        left: 0px;
        width: 100%;
        height: 100%;
    }
    nav.menuOn {
        padding: 70px 20px;
        width: 100%;
        height: 9999px;
        color: white;
        background-color: var(--black);
    }
    .colContainsContent {
        padding-top: 0px;
    }
    #contentOfSkip{
        /* padding-left: 15px; */
        /* width: 70%; */
    }
    
    #iconForSkip.menuOn {
        margin-top: 15px;
        margin-right: 15px;
    }
    th {
        text-align: center!important;
    }
    table {
        /* padding-right: 50px; */
        width: 100%;
    }
  }

/*------------------------------------------ 

            BODY OF WEBSITE

---------------------------------------------*/

.body {
    padding-top: 75px;
}

/*------------------------------------------ 

            HERO IMAGE

---------------------------------------------*/

.homeLogoContainingDiv {
    width: 75%;
    /* width: 100%; */
    height: 100%;
    max-height: 500px;
    margin: auto;
    display: block;
    float: left;
}

.homeLogo {
    display: block;
    width: 100%;
    height: 100%;
    max-height: 500px;
    padding-top: 30px;
    padding-bottom: 30px;
    object-fit: contain;
}

@media only screen and (max-width: 576px) {
    .homeLogoContainingDiv, .homeLogo {
        display: none;
    }
}

/*------------------------------------------ 

            EMBEDDED TWITTER

---------------------------------------------*/
/* .twitterBox {
    border: 15px solid var(--lightblue);
    padding: 50px;
    margin: 20px;
    height: 150px;
}

.twitter-timeline {
    width: 100%;
}

.twitterContainer {
    height: 420px;
    width: 100%;
    overflow: auto;
    float: left;
    padding-bottom: 15px;
    border-radius: 25px;
} */

/*------------------------------------------ 

        SECTION AND LOGOS/CREDITS

---------------------------------------------*/

.creditContainer {
    margin: auto;
    /* height: 90px; */
    width: 90px;
    padding-left: 20px;
    padding-bottom: 10px;

}

.creditsRow {
    padding: 15px;
}

.creditImage {
    height: 100%;
    max-height: 120px;
    width: 100%;
    object-fit: contain;
}

@media only screen and (max-width: 576px) {
    .creditImage {
        padding-top: 15px;
        padding-bottom: 15px;
    }
}

.paddingIntro {
    padding-right: 25px;
    padding-left: 25px;
}

/*------------------------------------------ 

            HEADERS AND SECTIONS

---------------------------------------------*/

.everyOtherSection {
    background-color: var(--lightbluegrey);
    height: fit-content;
    width: 100%;
    display: block;
    float: left;
    padding: 15px;
    margin-top: 15px;
    margin-bottom: 15px;
}

.newSectionHeader {
    display: block;
    float: left;
    width: 100%;
    text-align: center;
    color: var(--black);
}
/* ... */

